--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pandas>=0.19
-rasterio>=1.0
-geopandas>=0.7.0
-seaborn>=0.10.1
+numpy>=1.20.3
+pandas>=1.2.4
+rasterio>=1.2.3
+geopandas>=0.9.0
+seaborn>=0.11.1
 shapely>=1.7.0
-matplotlib>=3.3.2
+matplotlib>=3.3.4
